--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>LessonCraft</title>
+  <link rel="icon" type="image/png" href="./favicon.ico" />
 </head>
 
 <body>
